--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.95.4",
     "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
